# gn10-mainboard

./: .clang-format  .mxproject  2026a-gn10-mainboard.ioc  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml  release.yml
Core/Inc/: fdcan.h  i2c.h  main.h  spi.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
Core/Src/: fdcan.c  gpio.c  i2c.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  usart.c
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal.h  stm32g4xx_hal_cortex.h  stm32g4xx_hal_def.h  stm32g4xx_hal_dma.h  stm32g4xx_hal_dma_ex.h  stm32g4xx_hal_exti.h  stm32g4xx_hal_fdcan.h  stm32g4xx_hal_flash.h  stm32g4xx_hal_flash_ex.h  stm32g4xx_hal_flash_ramfunc.h  stm32g4xx_hal_gpio.h  stm32g4xx_hal_gpio_ex.h  stm32g4xx_hal_i2c.h  stm32g4xx_hal_i2c_ex.h  stm32g4xx_hal_pwr.h  stm32g4xx_hal_pwr_ex.h  stm32g4xx_hal_rcc.h  stm32g4xx_hal_rcc_ex.h  stm32g4xx_hal_spi.h  stm32g4xx_hal_tim.h  (+19 more)
gn10_mainboard/: CMakeLists.txt
gn10_mainboard/include/gn10_mainboard/: my_i2c.hpp  robomas_can.hpp
gn10_mainboard/src/: app.cpp  my_i2c.cpp  robomas_can.cpp
robomas_can/: CMakeLists.txt
robomas_can/src/: c610_can.cpp  c620_can.cpp  robomas_can.cpp
robomaster/src/: robomas_can.cpp
(+30 files in other folders)
